# G_Kentei

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_terms.py  0003_bookmarks.py  0004_exam_sessions.py  0005_question_notes.py  0006_reference_articles.py  0007_users.py
backend/app/: config.py  main.py
backend/app/api/: api_usage.py  auth.py  bookmarks.py  chat.py  exam.py  export.py  me.py  notes.py  notifications.py  questions.py  reference.py  stats.py  study.py  terms.py  users.py
backend/app/auth/: dependencies.py  jwt.py  password.py
backend/app/cli/: hash_password.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/llm/: article.py  chat.py  explanation.py  generator.py  pricing.py  usage.py
backend/app/schemas/: api_usage.py  chat.py  exam.py  generate.py  question.py  reference.py  stats.py  study.py  term.py
backend/app/seed/: reference_articles.py  seed_questions.py  seeder.py
backend/app/services/: notifications.py  question_import.py  srs.py  study.py
backend/tests/: test_auth.py  test_generator.py  test_health.py  test_models.py  test_pricing.py  test_question_import.py  test_question_schemas.py  test_srs.py  test_study_service.py  test_term_schemas.py
docs/: DEPLOY.md  requirements.md
frontend/: .dockerignore  Dockerfile.prod  next.config.ts  package-lock.json  package.json
scripts/: backup.sh  seed-questions.sh  (+2 more)
(+38 files in other folders)
